# HRMS

./: .env.example  .gitignore  HRMS_DOCUMENTATION.md  README.md  package-lock.json  package.json  vercel.json
.github/: copilot-instructions.md
.github/workflows/: build-agent.yml
apps/agent/: package.json
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/src/: credentials.rs  idle.rs  main.rs  ping.rs
apps/agent/ui/: index.html
apps/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: close-orphaned-checkins.mjs  diagnose-db.mjs  fix-user-ids.mjs  reset-passwords.mjs  test-admin-full.mjs  test-admin-pw.mjs  test-rls.mjs
supabase/: config.toml  seed.sql
supabase/functions/_shared/: audit.ts  auth.ts  date.ts  supabase.ts  validators.ts
supabase/functions/attendance-checkin/: index.ts
supabase/functions/attendance-checkout/: index.ts
supabase/functions/attendance-idle-event/: index.ts
supabase/functions/attendance-ping/: index.ts
supabase/functions/device-exchange-token/: index.ts
supabase/functions/leave-apply/: index.ts
supabase/functions/leave-approve/: index.ts
supabase/migrations/: 00001_enums.sql  00002_organizations.sql  00003_profiles.sql  00004_departments_locations.sql  00005_hr_policies.sql  00006_holiday_calendars.sql  00007_leave_management.sql  00008_attendance.sql  00009_payroll.sql  00010_feedback_notifications.sql  00011_audit_device.sql  00012_rls_policies.sql  00013_functions_triggers.sql  00014_agent_releases.sql  00015_profile_fk_links.sql
(+42 files in other folders)
