[package]
name = "hrms-agent"
version = "0.1.0"
edition = "2021"
description = "HRMS Desktop Agent – attendance tracking, idle detection, geo-ping"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "notification-all", "system-tray", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
keyring = "2"
chrono = "0.4"
hostname = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
